Restructure project to DDD monolithic architecture
